* [Bug 1285] Log ntpq :config/config-from-file events.
* [Bug 1286] dumpcfg omits statsdir, mangles filegen.
(4.2.5p204) 2009/08/17 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1284] infinite loop in ntpd dumping more than one trustedkey
(4.2.5p203) 2009/08/16 Released by Harlan Stenn <stenn@ntp.org>
* Add ntpq -c dumpcfg, Google Summer of Code project of Max Kuehn
(4.2.5p202) 2009/08/14 Released by Harlan Stenn <stenn@ntp.org>
* install the binary and man page for sntp.
(4.2.5p201) 2009/08/13 Released by Harlan Stenn <stenn@ntp.org>
* sntp: out with the old, in with the new.
(4.2.5p200) 2009/08/12 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1281] Build ntpd on Windows without big SDK download, burn,
  and install by checking in essentially unchanging messages.mc build
  products to avoid requiring mc.exe, which is not included with VC++
  2008 EE.
(4.2.5p199) 2009/08/09 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1279] Cleanup for warnings from Veracode static analysis.
(4.2.5p198) 2009/08/03 Released by Harlan Stenn <stenn@ntp.org>
* Upgrade to autogen-5.9.9-pre5.
(4.2.5p197) 2009/07/30 Released by Harlan Stenn <stenn@ntp.org>
* The build script now has . at the end of PATH for config.guess.
(4.2.5p196) 2009/07/29 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1272] gsoc_sntp IPv6 build problems under HP-UX 10.
* [Bug 1273] CID 10: Palisade leaks unit struct in error path.
* [Bug 1274] CID 67: ensure resolve_hosts() output count and pointers
  are consistent.
* [Bug 1275] CID 45: CID 46: old sntp uses uninitialized guesses[0],
  precs[0].
* [Bug 1276] CID 52: crypto_xmit() may call crypto_alice[23]()
  with NULL peer.
(4.2.5p195) 2009/07/27 Released by Harlan Stenn <stenn@ntp.org>
* cvo.sh: Add support for CentOS, Fedora, Slackware, SuSE, and QNX.
(4.2.5p194) 2009/07/26 Released by Harlan Stenn <stenn@ntp.org>
* Documentation updates from Dave Mills.
* Use scripts/cvo.sh in the build script to get better subdir names.